# advent-of-code

./: .gitignore  LICENSE  README.md  day_1.ua  day_2.ua  day_3.ua  day_4.ua  day_5.ua  day_6.ua  day_7.ua  day_9.ua
2023/: day_1.ua  day_10.ua  day_11.ua  day_12.ua  day_2.ua  day_3.ua  day_4.ua  day_8.ua
2024/cpp/: CMakeLists.txt  main.cpp
2024/haskell/: aoc.cabal  package.yaml
2024/haskell/app/: Main.hs
2024/rs/src/: main.rs
2024/uiua/: day_01.ua  day_02.ua  day_03.ua  day_04.ua
2025/haskell/: aoc.cabal  haskell.cabal
2025/haskell/app/: Day01.hs  Day02.hs
